--- a/public/join.html
+++ b/public/join.html
@@ -53,24 +53,25 @@
   const joinBtn = document.getElementById("joinBtn");
   const nameInput = document.getElementById("nameInput");
 
-  // Validate
+  // Validate link
   if (!roomId || !key) {
     alert("Invalid or expired chat link!");
-    window.location.href = "/";
+    window.location.href = "index.html";   // FIXED for app
     return;
   }
 
-  // Autofill name
+  // Autofill saved name
   const savedName = localStorage.getItem("blinkchat_name");
   if (savedName) nameInput.value = savedName;
 
-  // Join
+  // Join logic
   joinBtn.addEventListener("click", () => {
     const name = nameInput.value.trim() || "Anonymous";
     localStorage.setItem("blinkchat_name", name);
 
+    // Internal navigation (not browser)
     window.location.href =
-      `/chat.html?room=${roomId}&key=${key}&expireAt=${expireAt}`;
+      `chat.html?room=${roomId}&key=${key}&expireAt=${expireAt}`;
   });
 })();
 </script>
