--- a/public/join.html
+++ b/public/join.html
@@ -44,57 +44,61 @@
 
 <script>
 (() => {
-  const params = new URLSearchParams(window.location.search);
-  
-  // roomId is the long hex ID from the server
-  const roomId = params.get("room"); 
-  // passcode (p) is the 6-digit code for display
-  const passcode = params.get("p");
-  // secretKey is for local encryption
-  let key = params.get("key");
-  const expireAt = params.get("expireAt");
-
-  const joinBtn = document.getElementById("joinBtn");
-  const nameInput = document.getElementById("nameInput");
-  const roomDisplay = document.getElementById("roomDisplay");
-
-  // Validate session - we need the internal roomId to proceed
-  if (!roomId) {
-    alert("Invalid or expired session!");
-    window.location.href = "index.html";
-    return;
-  }
-
-  // Show the user the 6-digit code if available, otherwise the start of the Hex ID
-  roomDisplay.textContent = passcode ? `Joining Room: ${passcode}` : `Joining Room: ${roomId.substring(0, 8)}`;
-
-  // --- KEY RECOVERY LOGIC ---
-  // 1. If key isn't in URL, try to find it via passcode reference
-  if (!key && passcode) {
-    key = localStorage.getItem(`key_${passcode}`);
-  }
-  // 2. If still no key, check general last active key
-  if (!key) {
-    key = localStorage.getItem("last_secret_key");
-  }
-
-  // Autofill saved display name
-  const savedName = localStorage.getItem("blinkchat_name");
-  if (savedName) nameInput.value = savedName;
-
-  // Join logic
-  joinBtn.addEventListener("click", () => {
-    const name = nameInput.value.trim() || "Anonymous";
-    localStorage.setItem("blinkchat_name", name);
-
-    // Build the final chat URL
-    // We pass 'room' (ID), 'p' (Passcode), and 'key' (AES Key)
-    const chatUrl = `chat.html?room=${roomId}&p=${passcode || ''}&key=${key || ''}&expireAt=${expireAt}`;
+    const params = new URLSearchParams(window.location.search);
     
-    window.location.href = chatUrl;
-  });
+    // 1. Extract parameters from URL
+    const roomId = params.get("room");     // Long Hex ID (Server socket room)
+    const passcode = params.get("p");      // 6-digit code (User-facing)
+    let key = params.get("key");           // AES Encryption Key
+    const expireAt = params.get("expireAt");
+
+    const joinBtn = document.getElementById("joinBtn");
+    const nameInput = document.getElementById("nameInput");
+    const roomDisplay = document.getElementById("roomDisplay");
+
+    // 2. Validate session - If no roomId, we can't connect to the socket
+    if (!roomId) {
+        alert("Session expired or invalid link.");
+        window.location.href = "index.html";
+        return;
+    }
+
+    // 3. UI: Display the 6-digit passcode to the user
+    roomDisplay.textContent = passcode ? `Room Code: ${passcode}` : `Joining Private Room`;
+
+    // 4. KEY RECOVERY: Critical for the Creator/Re-joiner
+    // If the key is missing from the URL, check LocalStorage
+    if (!key) {
+        key = localStorage.getItem(`key_${passcode}`) || localStorage.getItem("last_secret_key");
+    }
+
+    // 5. USERNAME PREFERENCE: Autofill saved name
+    const savedName = localStorage.getItem("blinkchat_name");
+    if (savedName) nameInput.value = savedName;
+
+    // 6. JOIN ACTION
+    joinBtn.addEventListener("click", () => {
+        const name = nameInput.value.trim() || "Anonymous";
+        
+        // Save name for future use
+        localStorage.setItem("blinkchat_name", name);
+
+        // PERSISTENCE PRE-SAVE:
+        // We save these to localStorage BEFORE moving to chat.html. 
+        // This acts as a backup if chat.html reloads and loses URL params.
+        if (roomId) localStorage.setItem("last_room_id", roomId);
+        if (passcode) localStorage.setItem("last_passcode", passcode);
+        if (key) localStorage.setItem("last_secret_key", key);
+        if (expireAt) localStorage.setItem("last_expire_at", expireAt);
+
+        // Navigate to chat
+        // We pass 'p' (passcode) so chat.html can display it and use it for re-joins
+        const chatUrl = `chat.html?room=${roomId}&p=${passcode || ''}&key=${key || ''}&expireAt=${expireAt}`;
+        window.location.href = chatUrl;
+    });
 })();
 </script>
 
 </body>
 </html>
+
